--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ gz_ssh_config:
     shell: /bin/bash
   sftps: {}
   tests: {}
-  sftp_config:                      #Cfg template
+  sshd_config:                      #Cfg template
     file: '/etc/ssh/sshd_config'
     validate: '/usr/sbin/sshd -T -f %s'
     backup: yes
